{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 134,
  "lineage": "8c680bbd-d677-85f5-f391-4b8c34529b76",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830394630098:internet-gateway/igw-0104c14462b23dc67",
            "id": "igw-0104c14462b23dc67",
            "owner_id": "830394630098",
            "vpc_id": "vpc-05cc0f62b0a8ebfa0"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0104c14462b23dc67",
            "id": "r-rtb-07db2facee22294dc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07db2facee22294dc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830394630098:route-table/rtb-07db2facee22294dc",
            "id": "rtb-07db2facee22294dc",
            "owner_id": "830394630098",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05cc0f62b0a8ebfa0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080a5e8050a3ff492",
            "route_table_id": "rtb-07db2facee22294dc",
            "subnet_id": "subnet-0ba59e139e3db4342"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e55303fdfc4f6e1b",
            "route_table_id": "rtb-07db2facee22294dc",
            "subnet_id": "subnet-040a55366e2c87fb9"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830394630098:security-group/sg-0f899b2530ba592c7",
            "description": "Allow HTTP \u0026 HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f899b2530ba592c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP to VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS to VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_http_https",
            "name_prefix": "",
            "owner_id": "830394630098",
            "revoke_rules_on_delete": false,
            "tags": {
              "Group": "mts-dev"
            },
            "tags_all": {
              "Group": "mts-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-05cc0f62b0a8ebfa0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830394630098:subnet/subnet-012fc348082e2e5ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012fc348082e2e5ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "830394630098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Tier": "Private"
            },
            "tags_all": {
              "Tier": "Private"
            },
            "vpc_id": "vpc-05cc0f62b0a8ebfa0"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830394630098:subnet/subnet-0539eeb360b4ed0d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0539eeb360b4ed0d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "830394630098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Tier": "Private"
            },
            "tags_all": {
              "Tier": "Private"
            },
            "vpc_id": "vpc-05cc0f62b0a8ebfa0"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830394630098:subnet/subnet-0ba59e139e3db4342",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba59e139e3db4342",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "830394630098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Tier": "Public"
            },
            "tags_all": {
              "Tier": "Public"
            },
            "vpc_id": "vpc-05cc0f62b0a8ebfa0"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830394630098:subnet/subnet-040a55366e2c87fb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040a55366e2c87fb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "830394630098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Tier": "Public"
            },
            "tags_all": {
              "Tier": "Public"
            },
            "vpc_id": "vpc-05cc0f62b0a8ebfa0"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830394630098:vpc/vpc-05cc0f62b0a8ebfa0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05689e6e7de64d199",
            "default_route_table_id": "rtb-07eb5f157f9c96fa3",
            "default_security_group_id": "sg-03a3fefbcf5f9247b",
            "dhcp_options_id": "dopt-09f2dbc1b74335fcf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05cc0f62b0a8ebfa0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07eb5f157f9c96fa3",
            "owner_id": "830394630098",
            "tags": {
              "Group": "mts-dev"
            },
            "tags_all": {
              "Group": "mts-dev"
            }
          }
        }
      ]
    }
  ]
}